add blog heading css

--- a/wp-content/themes/kadence-child/assets/css/main.css
+++ b/wp-content/themes/kadence-child/assets/css/main.css
@@ -37,6 +37,19 @@
  * MARK: Aktuelles 
  */
 
+.button-start-blog-container {
+  position: relative;
+  a {
+    background: white url(../img/borders/border-kreis.svg) no-repeat 50% 50%;
+    background-size: cover;
+    color: var(--global-palette2);
+    position: absolute;
+    right: 20px;
+    top: 50px;
+    z-index: 10;
+  }
+}
+
 a.news-blog-link {
   background: var(--global-palette1) !important;
   color: var(--global-palette2) !important;
@@ -47,20 +60,25 @@ a.news-blog-link {
   }
 }
 
-h1:has(+ .news-blog) {
-  background: var(--global-palette1);
-  color: var(--global-palette2);
-  font-size: calc(var(--font-size-news-base) * 1.5) !important;
-  margin-inline: auto !important;
-  mask-image: url(../img/borders/border-landscape-lime.svg);
-  mask-size: 100% 100%;
-  padding: .5em .5em;
-}
-
 .blog-heading-container {
-  background: url(../img/borders/border-landscape-lime.svg) 100% 50% no-repeat;
-  background-size: cover;
-  padding: 3rem 5rem 3rem 2rem;
+  align-self: flex-start;
+  background-image: url(../img/borders/border-landscape-lime-blog-heading.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 0 50%;
+  box-sizing: border-box;
+  margin-block-end: .5rem;
+  padding: 2rem;
+  width: 100%;
+  .blog-heading {
+    font-size: clamp(0.49em, 6.8vw, 9vw);
+    span {
+      display: block;
+      &:last-child {
+        color: var(--global-palette2);
+      }
+    }
+  }
 }
 
 .news-blog,
@@ -83,6 +101,14 @@ h1:has(+ .news-blog) {
       color: var(--global-palette2);
     }
   }
+}
+
+.kb-row-layout-wrap .kt-row-column-wrap:has(.news-blog) {
+  padding-block-start: 4rem;
+}
+
+.kt-inside-inner-col:has(.news-blog) {
+  padding-block-start: 0 !important;
 }
 
 .news-blog {
@@ -190,16 +216,14 @@ h1:has(+ .news-blog) {
 }
 
 @media(min-width: 480px) {
-  h1:has(+ .news-blog) {
-    font-size: calc(var(--font-size-news-base) * 2) !important;
-    padding: .5em .5em;
+  .blog-heading-container {
+    margin-block-end: 1rem;
   }
 }
 
 @media(min-width: 600px) {
-  h1:has(+ .news-blog) {
-    font-size: calc(var(--font-size-news-base) * 2.5) !important;
-    padding: .5em 2em;
+  .blog-heading-container {
+    margin-block-end: 1.5rem;
   }
   .news-blog {
     .is-layout-grid.columns-3 {
@@ -218,6 +242,9 @@ h1:has(+ .news-blog) {
   :root {
     --font-size-news-base: 1.25rem;
   }
+  .blog-heading-container {
+    margin-block-end: 2rem;
+  }
   .news-blog {
     .is-layout-grid.columns-3 {
       gap: 3.5rem 2.5rem;
@@ -227,9 +254,7 @@ h1:has(+ .news-blog) {
 }
 
 @media(min-width: 1440px) {
-  h1:has(+ .news-blog) {
-    font-size: calc(var(--font-size-news-base) * 3) !important;
-  }
+
   .news-blog {
     .is-layout-grid.columns-3 {
       gap: 4rem 3.5rem;
