--- a/wp-content/themes/kadence-child/assets/css/main.css
+++ b/wp-content/themes/kadence-child/assets/css/main.css
@@ -167,6 +167,10 @@ a.news-blog-link {
   }
 }
 
+.kadence-thumbnail-position-behind:has(+ .category-aktuelles) {
+  margin-bottom: 1rem;
+}
+
 .wp-site-blocks .post-thumbnail {
   height: auto !important;
   padding: 0 !important;
@@ -225,6 +229,9 @@ a.news-blog-link {
   .blog-heading-container {
     margin-block-end: 1.5rem;
     padding-inline-start: 3rem;
+    h2 {
+      line-height: .9;
+    }
   }
   .news-blog {
     .is-layout-grid.columns-3 {
@@ -236,6 +243,12 @@ a.news-blog-link {
     .entry-title {
       font-size: calc(var(--font-size-news-base) * 2) !important;
     }
+  }
+}
+
+@media(min-width: 900px) {
+  .kadence-thumbnail-position-behind:has(+ .category-aktuelles) {
+    margin-bottom: -4.3em;
   }
 }
 
