--- a/wp-content/themes/kadence-child/assets/css/main.css
+++ b/wp-content/themes/kadence-child/assets/css/main.css
@@ -37,16 +37,67 @@
  * MARK: Aktuelles 
  */
 
-.button-start-blog-container {
+.kadence-column64_98fa6f-c1 > .kt-inside-inner-col {
   position: relative;
+}
+
+.button-start-blog-container {
+  aspect-ratio: 1 / 1;
+  font-size: 1rem;
+  height: auto;
+  position: absolute;
+  right: 20px;
+  top: 50px;
+  width: 80px;
+  z-index: 10;
   a {
-    background: white url(../img/borders/border-kreis.svg) no-repeat 50% 50%;
-    background-size: cover;
+    align-items: center;
+    background-color: var(--global-palette3);
+    /* background-color: var(--global-palette1); */
+    /* background-color: red; */
+    border-radius: 100%;
     color: var(--global-palette2);
-    position: absolute;
-    right: 20px;
-    top: 50px;
-    z-index: 10;
+    display: flex;
+    font-family: 'Campton Bold';
+    font-weight: 400;
+    height: 100%;
+    justify-content: center;
+    line-height: 1;
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+    transform: rotate(-16deg);
+    transition: all .25s ease-in-out;
+    width: 100%;
+    &::before {
+      background-image: url(../img/borders/border-button-circle.svg);
+    background-position: 50% 50%;
+    background-repeat: no-repaet;
+    background-size: contain;
+      border-radius: 100%;
+      content: '';
+      display: block;
+      height: calc(100% + 10px);
+      position: absolute;
+      width: calc(100% + 10px);
+      z-index: 2;
+    }
+    &:focus,
+    &:hover {
+      background-color: var(--global-palette1);
+      /* background-color: var(--global-palette3); */
+      transform: rotate(0deg);
+    }
+    .inner {
+      span {
+        color: black;
+        display: block;
+      }
+      span:last-child {
+        color: var(--global-palette2)
+      }
+    }
+    
   }
 }
 
@@ -226,6 +277,10 @@ a.news-blog-link {
 }
 
 @media(min-width: 600px) {
+  .button-start-blog-container {
+    font-size: 1.25rem;
+    width: 100px;
+  }
   .blog-heading-container {
     margin-block-end: 1.5rem;
     padding-inline-start: 3rem;
@@ -247,6 +302,10 @@ a.news-blog-link {
 }
 
 @media(min-width: 900px) {
+  .button-start-blog-container {
+    font-size: 1.5rem;
+    width: 130px;
+  }
   .kadence-thumbnail-position-behind:has(+ .category-aktuelles) {
     margin-bottom: -4.3em;
   }
@@ -255,6 +314,10 @@ a.news-blog-link {
 @media(min-width: 1200px) {
   :root {
     --font-size-news-base: 1.25rem;
+  }
+  .button-start-blog-container {
+    font-size: 2rem;
+    width: 150px;
   }
   .kb-row-layout-wrap .kt-row-column-wrap:has(.news-blog) {
     padding-block-start: 6.5rem;
@@ -271,7 +334,10 @@ a.news-blog-link {
 }
 
 @media(min-width: 1440px) {
-
+  .button-start-blog-container {
+    font-size: 2.25rem;
+    width: 175px;
+  }
   .news-blog {
     .is-layout-grid.columns-3 {
       gap: 4rem 3.5rem;
@@ -287,6 +353,10 @@ a.news-blog-link {
 @media(min-width: 2000px) {
   :root {
     --font-size-news-base: 1.375rem !important;
+  }
+  .button-start-blog-container {
+    font-size: 2.5rem;
+    width: 200px;
   }
 }
 
