--- a/wp-content/themes/kadence-child/assets/css/main.css
+++ b/wp-content/themes/kadence-child/assets/css/main.css
@@ -40,14 +40,13 @@
 .kadence-column64_98fa6f-c1 > .kt-inside-inner-col {
   position: relative;
 }
-
 .button-start-blog-container {
   aspect-ratio: 1 / 1;
   font-size: 1rem;
   height: auto;
   position: absolute;
-  right: 20px;
-  top: 50px;
+  right: 80px;
+  top: 10px;
   width: 80px;
   z-index: 10;
   a {
@@ -271,6 +270,10 @@ a.news-blog-link {
 }
 
 @media(min-width: 480px) {
+  .button-start-blog-container {
+    right: 20px;
+    top: 80px;
+  }
   .blog-heading-container {
     margin-block-end: 1rem;
   }
