modify cta responsive positions

--- a/wp-content/themes/kadence-child/assets/css/main.css
+++ b/wp-content/themes/kadence-child/assets/css/main.css
@@ -45,7 +45,7 @@
   font-size: 1rem;
   height: auto;
   position: absolute;
-  right: 80px;
+  right: 100px;
   top: 10px;
   width: 80px;
   z-index: 10;
@@ -271,7 +271,8 @@ a.news-blog-link {
 
 @media(min-width: 480px) {
   .button-start-blog-container {
-    
+    right: 20px;
+    top: 100px;
   }
   .blog-heading-container {
     margin-block-end: 1rem;
@@ -281,9 +282,6 @@ a.news-blog-link {
 @media(min-width: 600px) {
   .button-start-blog-container {
     font-size: 1.25rem;
-    left: 50%;
-    right: auto;
-    top: 80px;
     width: 100px;
   }
   .blog-heading-container {
@@ -313,6 +311,14 @@ a.news-blog-link {
   }
   .kadence-thumbnail-position-behind:has(+ .category-aktuelles) {
     margin-bottom: -4.3em;
+  }
+}
+
+@media(min-width: 1025px) {
+  .button-start-blog-container {
+    left: 50%;
+    right: auto;
+    top: 80px;
   }
 }
 
