--- a/wp-content/themes/kadence-child/assets/css/main.css
+++ b/wp-content/themes/kadence-child/assets/css/main.css
@@ -184,10 +184,14 @@ a.news-blog-link {
     overflow: hidden;
   }
   .wp-post-image {
-    left: 50%;
+    /* left: 50%;
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    width: 100%;
   }
   .wp-block-post-title {
     color: var(--global-palette2);
